GScript does things :)