@@ -2,8 +2,6 @@ package com.gillessed.gscript;
 
 import java.math.BigDecimal;
 import java.math.BigInteger;
-import java.util.ArrayList;
-import java.util.List;
 
 import com.gillessed.gscript.GObject.Type;
 
@@ -11,11 +9,14 @@ public class GObjectConverter {
     public static GObject convertToGObject(Object obj) {
         if(obj == null) {
             return new GObject(null, Type.NULL);
-        } else if(obj.getClass() == Integer.class ||
-                obj.getClass() == Long.class ||
-                obj.getClass() == Short.class ||
-                obj.getClass() == Byte.class) {
-            return new GObject(BigInteger.valueOf((long)obj), Type.INT);
+        } else if(obj.getClass() == Byte.class) {
+            return new GObject(BigInteger.valueOf(new Long((byte)obj)), Type.INT);
+        } else if(obj.getClass() == Short.class) {
+            return new GObject(BigInteger.valueOf(new Long((short)obj)), Type.INT);
+        } else if(obj.getClass() == Integer.class) {
+            return new GObject(BigInteger.valueOf(new Long((int)obj)), Type.INT);
+        } else if(obj.getClass() == Long.class) {
+            return new GObject(BigInteger.valueOf((Long)obj), Type.INT);
         } else if(obj.getClass() == Float.class ||
                 obj.getClass() == Double.class) {
             return new GObject(BigDecimal.valueOf((double)obj), Type.FLOAT);
@@ -25,12 +26,11 @@ public class GObjectConverter {
             return new GObject(obj, Type.STRING);
         } else if(obj.getClass() == Character.class) {
             return new GObject(obj, Type.CHAR);
-        } else if(obj.getClass() == List.class) {
-            @SuppressWarnings("unchecked")
-            List<Object> input = (List<Object>)obj;
-            List<GObject> list = new ArrayList<>();
-            for(Object listObj : input) {
-                list.add(convertToGObject(listObj));
+        } else if(obj.getClass().isArray()) {
+            Object[] input = (Object[])obj;
+            GObject[] list = new GObject[input.length];
+            for(int i = 0; i < input.length; i++) {
+                list[i] = convertToGObject(input[i]);
             }
             return new GObject(list, Type.LIST);
         } else {
@@ -55,11 +55,10 @@ public class GObjectConverter {
             BigInteger intValue = (BigInteger)object.getValue();
             return intValue.longValue();
         case LIST:
-            @SuppressWarnings("unchecked")
-            List<GObject> listValue = (List<GObject>)object.getValue();
-            List<Object> normalList = new ArrayList<>();
-            for(GObject gobj : listValue) {
-                normalList.add(convertFromGObject(gobj));
+            GObject[] listValue = (GObject[])object.getValue();
+            Object[] normalList = new GObject[listValue.length];
+            for(int i = 0; i < listValue.length; i++) {
+                normalList[i] = convertFromGObject(listValue[i]);
             }
             return normalList;
         case STRING:
